feat: Update security configuration and improve user authentication flow

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ SERVER_PORT=80
 DB_URL=jdbc:postgresql://postgres:5432/jolt_db
 DB_USER=admin
 DB_PASSWORD=Etudiant2
+
+PEPPER=9H2XqcBZl3fKJ7tD5vEgRm0pYnT8W4uPQsSNjV6AyOIxLzFhGdUMbC1o
