--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,13 @@ db.url={DB_URL}
 db.username={DB_USER}
 db.password={DB_PASSWORD}
 
+server.ssl.enabled=false
+server.ssl.port={SSL_PORT}
+server.ssl.keyStore={SSL_KEYSTORE}
+server.ssl.keyStorePassword={SSL_KEYSTORE_PASSWORD}
+server.ssl.keyAlias={SSL_KEY_ALIAS}
+
 session.secure=false
 
+server.security.secret_key={SECRET_KEY}
 server.security.pepper={PEPPER}
