--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,13 +6,26 @@ db.url={DB_URL}
 db.username={DB_USER}
 db.password={DB_PASSWORD}
 
-server.ssl.enabled=false
+# SSL
+server.ssl.enabled=true
 server.ssl.port={SSL_PORT}
 server.ssl.keyStore={SSL_KEYSTORE}
 server.ssl.keyStorePassword={SSL_KEYSTORE_PASSWORD}
 server.ssl.keyAlias={SSL_KEY_ALIAS}
 
-session.secure=false
+# Session
+session.secure=true
 
+# Security
 server.security.secret_key={SECRET_KEY}
 server.security.pepper={PEPPER}
+
+# Email
+server.smtp.host={SMTP_HOST}
+server.smtp.port={SMTP_PORT}
+server.smtp.username={SMTP_USERNAME}
+server.smtp.password={SMTP_PASSWORD}
+server.smtp.from.email={SMTP_FROM_EMAIL}
+server.smtp.from.name={SMTP_FROM_NAME}
+server.smtp.use.tls={SMTP_USE_TLS}
+server.smtp.auth={SMTP_AUTH}
