Refactor authentication and email services; implement user support ticket system
- Removed the updateEmail method from AuthService to streamline user management.
- Refactored EmailService to utilize Mailgun API for sending emails, replacing the previous SMTP configuration.
- Updated application properties to reflect Mailgun settings.
- Enhanced AuthValidator to enforce email domain restrictions for registration.
- Added UserSupportTicketBroker and UserSupportTicket entity to manage user support tickets with IP address validation.
- Introduced new helper methods for formatting time and improved footer styling in templates.
- Updated registration form to include email validation and improved user experience with loading indicators.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,11 +21,7 @@ server.security.secret_key={SECRET_KEY}
 server.security.pepper={PEPPER}
 
 # Email
-server.smtp.host={SMTP_HOST}
-server.smtp.port={SMTP_PORT}
-server.smtp.username={SMTP_USERNAME}
-server.smtp.password={SMTP_PASSWORD}
-server.smtp.from.email={SMTP_FROM_EMAIL}
-server.smtp.from.name={SMTP_FROM_NAME}
-server.smtp.use.tls={SMTP_USE_TLS}
-server.smtp.auth={SMTP_AUTH}
+server.email.mailgun.domain={MAILGUN_DOMAIN}
+server.email.mailgun.api_key={MAILGUN_API_KEY}
+server.email.from.email={EMAIL_FROM}
+server.email.from.name={EMAIL_FROM_NAME}
