--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
       <artifactId>java-otp</artifactId>
       <version>0.4.0</version>
     </dependency>
+    <dependency>
+      <groupId>com.mashape.unirest</groupId>
+      <artifactId>unirest-java</artifactId>
+      <version>1.4.9</version>
+    </dependency>
   </dependencies>
 
   <build>
